--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,6 +1,9 @@
 - provide(:title, 'Home')
-h1 Sample Application
-p For learning Ruby on Rails and testing frameworks like:
-ul
-  li.first RSpec
-  li. Cucumber
+.center.hero-unit
+  h1 Sample RoRToT Application
+  h2 For learning Ruby on Rails and testing frameworks like:
+  ul
+    li.first RSpec
+    li. Cucumber
+  h2 Join now!
+  = link_to "Sign Up", '#', class: "btn btn-large btn-primary"
