--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,3 +1,4 @@
 - provide(:title, "WELCOME!")
-h1 You are welcome!
-
+h1 You are welcome to #{link_to 'Ruby on Rails application!', 'http://localhost:3000/home'}
+.center
+  = link_to image_tag("rails.svg"), 'http://rubyonrails.org'
