--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,8 +1,9 @@
 footer.footer
   small
     = link_to "Rails Tutorial", 'http://railstutorial.org'
+    |  by Michael
   nav
     ul
-      li.first = link_to "About", '#'
-      li = link_to "Contact", '#'
+      li.first = link_to "About", 'about_path'
+      li = link_to "Contact", 'contacts_path'
 
