--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,13 +1,26 @@
 header.navbar.navbar-inverse.navbar-fixed-top
-  .navbar-inner
-    .container
-      = link_to "RoRToT", root_path, id: "logo"
-      nav
-      ul.nav.pull-right
-          li.first.active = link_to "Home", root_path
-          li.divider-vertical
-          li = link_to "About", about_path
-          li.divider-vertical
-          li = link_to "FAQ", faq_path
-          li.divider-vertical
-          li = link_to "Contacts", contacts_path
+  .container
+    .navbar-header
+      button.navbar-toggle(type='button' data-toggle='collapse' data-target='.navbar-collapse')
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='/') RoRToT
+    .collapse.navbar-collapse
+      ul.nav.navbar-nav
+        li.first: a(href='/') Home
+        li: a(href='/about') About
+        li: a(href='/contacts') Contacts
+        / li.dropdown
+        /   a.dropdown-toggle(href='#' data-toggle='dropdown') Dropdown
+        /     b.caret
+        /   ul.dropdown-menu
+        /     li: a(href='#') Action
+        /     li: a(href='#') Another action
+        /     li: a(href='#') Something else here
+        /     li.divider
+        /     li.dropdown-header Nav header
+        /     li: a(href='#') Separated Link
+        /     li: a(href='#') One more separated link
+
