--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,10 +1,10 @@
 - provide(:title, 'Home')
 .center.hero-unit
   h1 You are welcome to #{link_to 'Sample Ruby on Rails application!', 'http://localhost:3000/home'}
-  = link_to image_tag("rails.svg"), 'http://rubyonrails.org'
+  = link_to image_tag("rails.svg", alt: "Rails"), 'http://rubyonrails.org'
   h2 This RoRToT created for learning Ruby on Rails and testing frameworks like:
   ul
     li.first RSpec
-    li. Cucumber
-    h2 Join now!
-  = link_to "Sign Up", '#', class: "btn btn-large btn-primary"
+    li Cucumber
+  h2 Join now!
+  = link_to "Sign Up", 'signup_path', class: "btn btn-large btn-primary"
