Rspec shared example & fixes

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -4,6 +4,6 @@ footer.footer
     |  by Michael Hartl
   nav
     ul
-      li.first = link_to "About", 'about_path'
-      li = link_to "Contact", 'contacts_path'
+      li.first = link_to "About", about_path
+      li = link_to "Contact", contacts_path
 
