--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,6 +11,7 @@ header.navbar.navbar-inverse.navbar-fixed-top
       ul.nav.navbar-nav
         li.first: a(href='/') Home
         li: a(href='/about') About
+        li: a(href='/faq') FAQ
         li: a(href='/contacts') Contacts
         / li.dropdown
         /   a.dropdown-toggle(href='#' data-toggle='dropdown') Dropdown
