--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,6 +1,6 @@
 - provide(:title, 'Home')
 .center.hero-unit
-  h1 You are welcome to #{link_to 'Sample Ruby on Rails application!', 'http://localhost:3000/home'}
+  h1 You are welcome to #{link_to 'Sample Ruby on Rails application!', about_path }
   = link_to image_tag("rails.svg", alt: "Rails"), 'http://rubyonrails.org'
   h2 This RoRToT created for learning Ruby on Rails and testing frameworks like:
   ul
