--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -7,4 +7,4 @@
     li.first RSpec
     li Cucumber
   h2 Join now!
-  = link_to "Sign Up", 'signup_path', class: "btn btn-large btn-primary"
+  = link_to "Sign Up", signup_path, class: "btn btn-large btn-primary"
