--- a/app/views/static_pages/contacts.html.slim
+++ b/app/views/static_pages/contacts.html.slim
@@ -1,5 +1,5 @@
 - provide(:title, 'Contacts')
 h1 For your answers
 ul
-  li.first Telegram: Ruslang
-  li. Mail: ruslan.goncharuk@mkechinov.ru
+  li Telegram: Ruslang
+  li Mail: ruslan.ftw@ya.ru
