--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,3 +1,22 @@
 - provide(:title, 'Sign up')
 h1 Registration
-p Find me in app/views/users/new.html.slim
+
+.container
+  .row
+    .Absolute-Center.is-Responsive
+      .col-sm-20.col-md-20
+        = form_for(@user) do |f|
+          = render 'shared/error_messages'
+          = f.label :name
+          = f.text_field :name, placeholder: 'Name'
+
+          = f.label :email
+          = f.text_field :email
+
+          = f.label :password
+          = f.text_field :password
+
+          = f.label :password_confirmation, "Confirmation"
+          = f.password_field :password_confirmation
+
+          = f.submit "Create my account", class: "btn btn-large btn-primary"
