--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -4,7 +4,7 @@
   = link_to image_tag("rails.svg", alt: "Rails"), 'http://rubyonrails.org'
   h2 This RoRToT created for learning Ruby on Rails and testing frameworks like:
   ul
-    li.first RSpec
+    li RSpec
     li Cucumber
   h2 Join now!
   = link_to "Sign Up", signup_path, class: "btn btn-large btn-primary"
