--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,9 +1,9 @@
 footer.footer
-  small
-    = link_to "Rails Tutorial", 'http://railstutorial.org'
-    |  by Michael Hartl
-  nav
-    ul
-      li.first = link_to "About", about_path
-      li = link_to "Contact", contacts_path
+  / small
+  /   = link_to "Rails Tutorial", 'http://railstutorial.org'
+  /   |  by Michael Hartl
+  / nav
+  /   ul
+  /     li.first = link_to "About", about_path
+  /     li = link_to "Contact", contacts_path
 
