--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -13,15 +13,16 @@ header.navbar.navbar-inverse.navbar-fixed-top
         li: a(href='/about') About
         li: a(href='/faq') FAQ
         li: a(href='/contacts') Contacts
-        / li.dropdown
-        /   a.dropdown-toggle(href='#' data-toggle='dropdown') Dropdown
-        /     b.caret
-        /   ul.dropdown-menu
-        /     li: a(href='#') Action
-        /     li: a(href='#') Another action
-        /     li: a(href='#') Something else here
-        /     li.divider
-        /     li.dropdown-header Nav header
-        /     li: a(href='#') Separated Link
-        /     li: a(href='#') One more separated link
+        -if signed_in?
+          li.dropdown
+            a.dropdown-toggle(href='#' data-toggle='dropdown') Dropdown
+              b.caret
+            ul.dropdown-menu
+              li: a(href='/profile') Profile text
+              li: a(href='#') Another action
+              li: a(href='#') Something else here
+              li.divider
+              li.dropdown-header Nav header
+              li: a(href='#') Separated Link
+              li: a(href='#') One more separated link
 
