--- a/app/views/static_pages/contacts.html.slim
+++ b/app/views/static_pages/contacts.html.slim
@@ -1,5 +1,6 @@
 - provide(:title, 'Contacts')
 h1 For your answers
 ul
-  li Telegram: Ruslang
-  li Mail: ruslan.ftw@ya.ru
+  li Telegram: #{link_to "Ruslang", 'http://telegram.me/Ruslang'}
+  li Mail: #{link_to "Ruslan.FTW", 'mailto:ruslang@live.ru'}
+  li VK: #{link_to "Ruslang", 'http://vk.com/ruslang'}
