--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,7 +1,7 @@
 footer.footer
   small
-    = link_to "Rails Tutorial", 'http://railstutorial.org'
-    |  by Michael Hartl
+    = link_to "Based on rails tutorial by", 'http://railstutorial.org'
+    |  Michael Hartl
   nav
     ul
       li.first = link_to "About", about_path
