--- a/app/views/static_pages/contacts.html.slim
+++ b/app/views/static_pages/contacts.html.slim
@@ -2,5 +2,5 @@
 h1 For your answers
 ul
   li Telegram: #{link_to "Ruslang", 'http://telegram.me/Ruslang'}
-  li Mail: #{link_to "Ruslan.FTW", 'mailto:ruslang@live.ru'}
-  li VK: #{link_to "Ruslang", 'http://vk.com/ruslang'}
+  li Mail: #{link_to "Ruslan", 'mailto:Ruslang@live.ru'}
+  li VK: #{link_to "Ruslang", 'http://vk.com/Ruslang'}
